--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vjr-frontend-server",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "server.js",
   "scripts": {
@@ -10,7 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "fastboot-app-server": "1.0.0-rc.5",
-    "fastboot-s3-downloader": "bcardarella/fastboot-s3-downloader#bc-support-tarballs",
+    "fastboot-s3-downloader": "^0.2.1",
     "fastboot-s3-notifier": "^0.1.1"
   }
 }
