--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vjr-frontend-server",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "",
   "main": "server.js",
   "scripts": {
@@ -9,7 +9,7 @@
   "author": "Timmie Sarjanen <timmie.sarjanen@gmail.com>",
   "license": "ISC",
   "devDependencies": {
-    "fastboot-app-server": "1.0.0-rc.5",
+    "fastboot-app-server": "1.1.0",
     "fastboot-s3-downloader": "^0.2.1",
     "fastboot-s3-notifier": "^0.1.1"
   },
